--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^16.5.0",
+    "eslint": "^8.32.0",
+    "eslint-plugin-react-native": "^4.0.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
@@ -23,7 +27,17 @@
     "@types/react": "^18.0.26",
     "@types/react-native": "~0.70.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.1",
+    "prettier": "^2.8.3",
+    "react-native-dotenv": "^3.4.7",
     "typescript": "^4.9.4"
   },
-  "private": true
+  "private": true,
+  "description": "collaboration | innovation | socialization",
+  "repository": "https://github.com/JeikuDevvv/kauban_appV1.git",
+  "author": "jake lourence villar <shippai.jeikudev@gmail.com>",
+  "license": "MIT"
 }
