--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9"
   },
